--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,17 +35,19 @@
       }
     }
   },
+  "image": "mcr.microsoft.com/devcontainers/base:debian",
   "features": {
     "ghcr.io/devcontainers/features/git-lfs:1": {},
     "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/devcontainers/features/node:1": {},
+    "ghcr.io/devcontainers/features/rust:1": {
+      "profile": "complete"
+    },
     "ghcr.io/devcontainers-extra/features/pre-commit:2": {},
     "ghcr.io/devcontainers-extra/features/starship:1": {},
     "ghcr.io/meaningful-ooo/devcontainer-features/fish:1": {}
   },
-  "image": "mcr.microsoft.com/devcontainers/rust:latest",
   "mounts": [
-    "source=/usr/local/exegy,target=/usr/local/exegy,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.config,target=/home/vscode/.config,type=bind,consistency=cached",
     "source=${localEnv:HOME}/dotfiles,target=/home/vscode/dotfiles,type=bind,consistency=cached"
   ],
