feat: start filling in serde field types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 resolver = "2"
 members = ["parser"]
 
+[workspace.metadata.release]
+shared-version = true
+consolidate-commits = true
+tag-name = "v{{version}}"
+
 [workspace.package]
 authors = ["James Cape <jamescape777@gmail.com>"]
 edition = "2021"
@@ -11,3 +16,6 @@ readme = "README.md"
 repository = "https://github.com/jcape/iso10383"
 rust-version = "1.85.0"
 version = "0.1.0"
+
+[profile.release]
+lto = true
