--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,6 +55,7 @@
   ],
   "name": "iso10383",
   "privileged": true,
+  "postCreateCommand": "/workspaces/iso10383/.devcontainer/post-create.sh",
   "postAttachCommand": "/workspaces/iso10383/.devcontainer/post-attach.sh",
   "remoteEnv": {
     "CARGO_HOME": "/workspaces/iso10383/.cache/cargo",
