--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -15,4 +15,7 @@ std = ["serde/std"]
 
 [dependencies]
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-url = "2.5.4"
+quick-xml = { version = "0.37.2", features = ["serialize"] }
+
+[dev-dependencies]
+yare = "3"
