feat!: `types` crate with &mic/Mic, parser enums
- Add `iso10383-types` crate.
- Move enums from `parser` to `types`.
- Add `Mic` and `&mic` types.
- Rename `iso10383_parser::Mic` to `MicRecord`
- Use `iso10383_types::Mic` in `MicRecord`
- Add badges to READMEs.

BREAKING-CHANGE: Move the `Category`, `Kind`, `Status` enums to a new crate, and rename `Mic` deserialization struct to `MicRecord`

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -11,9 +11,11 @@ rust-version.workspace = true
 
 [features]
 default = ["std"]
-std = ["serde/std"]
+std = ["serde/std", "chrono/serde"]
 
 [dependencies]
+chrono.workspace = true
+iso10383-types.workspace = true
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
