--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [workspace]
 resolver = "2"
-members = ["parser"]
+members = ["parser", "types"]
 
 [workspace.dependencies]
+chrono = { version = "0.4", default-features = false }
 iso10383-parser = { path = "./parser" }
 iso10383-static = { path = "./static" }
 iso10383-types = { path = "./types" }
+iso17442-types = { version = "0.2", default-features = false }
 quick-xml = { version = "0.37.2", features = ["serialize"] }
 
 [workspace.lints.clippy]
@@ -28,7 +30,7 @@ homepage = "https://github.com/jcape/iso10383"
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/jcape/iso10383"
-rust-version = "1.85.0"
+rust-version = "1.87.0"
 version = "0.1.2"
 
 [profile.release]
