--- a/deny.toml
+++ b/deny.toml
@@ -1,5 +1,3 @@
-targets = []
-
 [advisories]
 db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
@@ -10,28 +8,25 @@ version = 2
 version = 2
 allow = [
     "Apache-2.0",
-    "Apache-2.0 WITH LLVM-exception",
-    "BSD-3-Clause",
-    "ISC",
     "MIT",
-    "Unicode-DFS-2016",
     "Unicode-3.0",
 ]
 confidence-threshold = 0.8
 exceptions = []
 
 [bans]
-multiple-versions = "warn"
-# Lint level for when a crate version requirement is `*`
-wildcards = "deny"
-highlight = "all"
 allow = []
+allow-wildcard-paths = true
 deny = [
     # https://github.com/briansmith/ring/issues/774
     { name = "ring" },
 ]
+highlight = "all"
+multiple-versions = "warn"
 skip = []
 skip-tree = []
+# Lint level for when a crate version requirement is `*`
+wildcards = "deny"
 
 [sources]
 unknown-registry = "warn"
