--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,19 @@ quick-xml = { version = "0.38.3", features = ["serialize"] }
 serde = { version = "1", default-features = false }
 
 [workspace.lints.clippy]
-missing_safety_doc = "forbid"
+cargo = "deny"
+complexity = "deny"
+pedantic = "deny"
+perf = "deny"
+style = "deny"
 
 [workspace.lints.rust]
-missing_docs = "forbid"
+missing_debug_implementations = "deny"
+missing_docs = "deny"
+unreachable_pub = "deny"
+rust_2018_idioms = "deny"
 unsafe_code = "deny"
-missing_debug_implementations = "forbid"
+
 
 [workspace.metadata.release]
 shared-version = true
@@ -29,7 +36,7 @@ homepage = "https://github.com/jcape/iso10383"
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/jcape/iso10383"
-rust-version = "1.87.0"
+rust-version = "1.92.0"
 version = "0.3.0"
 
 [profile.release]
