--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,11 +1,7 @@
 [package]
 name = "iso10383-parser"
 authors.workspace = true
-categories = [
-  "data-structures",
-  "finance",
-  "parser-implementations",
-]
+categories = ["data-structures", "finance", "parser-implementations"]
 description = "Parser for ISO 10383 XML Data"
 documentation = "https://docs.rs/iso10383-parser"
 edition.workspace = true
@@ -18,9 +14,8 @@ version.workspace = true
 
 [dependencies]
 chrono = { workspace = true, features = ["std", "serde"] }
-iso10383-types = { version = "=0.3.1", path = "../types", features = [
-    "serde",
-] }
+iso3166-static = { workspace = true, features = ["serde", "alloc"] }
+iso10383-types = { version = "=0.3.1", path = "../types", features = ["serde"] }
 serde = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
