--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -56,5 +56,5 @@
     "seccomp=unconfined"
   ],
   "updateRemoteUserUID": true,
-  "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/iso10383,type=bind,consistency=cached"
+  "workspaceMount": "source=${localWorkspaceFolder}/..,target=/workspaces,type=bind,consistency=cached"
 }
