docs: update keywords and links

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -5,7 +5,7 @@ categories = ["data-structures", "finance", "parser-implementations"]
 description = "Parser for ISO 10383 XML Data"
 documentation = "https://docs.rs/iso10383-parser"
 edition.workspace = true
-keywords = ["iso10383", "market-identifier-codes"]
+keywords = ["iso10383", "mic"]
 license.workspace = true
 readme = "README.md"
 repository.workspace = true
