--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -10,7 +10,7 @@ categories = [
 description = "ISO 10383 Types"
 documentation = "https://docs.rs/iso10383-types"
 edition.workspace = true
-keywords = ["iso10383", "market-identifier-codes"]
+keywords = ["iso10383", "mic"]
 license.workspace = true
 readme = "README.md"
 repository.workspace = true
