--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -27,3 +27,6 @@ ref-cast = "1.0"
 iso3166-static.workspace = true
 serde = { workspace = true, features = ["derive"], optional = true }
 thiserror = { version = "2.0", default-features = false }
+
+[package.metadata.docs.rs]
+all-features = true
