--- a/static/Cargo.toml
+++ b/static/Cargo.toml
@@ -8,7 +8,7 @@ documentation = "https://docs.rs/iso10383-static"
 edition.workspace = true
 keywords = ["iso10383", "mic"]
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 repository.workspace = true
 rust-version.workspace = true
 
