--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -3,7 +3,7 @@ name = "iso10383-macros"
 description = "Code generation for ISO 10383 MIC Data"
 edition = "2024"
 authors.workspace = true
-categories = ["data-structures", "finance"]
+categories = ["finance", "localization"]
 documentation = "https://docs.rs/iso10383-macros"
 homepage.workspace = true
 keywords = ["iso10383", "mic"]
