--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "iso10383-parser"
 authors.workspace = true
-categories = ["data-structures", "finance", "parser-implementations"]
+categories = ["finance", "localization", "parser-implementations"]
 description = "Parser for ISO 10383 XML Data"
 documentation = "https://docs.rs/iso10383-parser"
 edition.workspace = true
