--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "iso10383-types"
 authors.workspace = true
-categories = ["data-structures", "finance", "no-std", "no-std::no-alloc"]
+categories = ["finance", "localization", "no-std", "no-std::no-alloc"]
 description = "ISO 10383 Types"
 documentation = "https://docs.rs/iso10383-types"
 edition.workspace = true
@@ -22,6 +22,9 @@ ref-cast = "1.0"
 iso3166-static.workspace = true
 serde = { workspace = true, features = ["derive"], optional = true }
 thiserror = { version = "2.0", default-features = false }
+
+[dev-dependencies]
+serde_json.workspace = true
 
 [package.metadata.docs.rs]
 all-features = true
