--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,13 @@
 default_install_hook_types:
   - pre-commit
   - commit-msg
-exclude: ^LICENSE
+exclude: |-
+  (?x)^(
+    ^LICENSE
+    |^CODE_OF_CONDUCT.md
+    |^parser\/tests\/.*.xml
+    |^static\/src\/ISO10383_MIC.xml
+  )$
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
