--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 ---
 name: ci
+permissions:
+  contents: read
 
 "on":
   pull_request:
@@ -12,6 +14,8 @@ env:
 
 jobs:
   lint:
+    permissions:
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
