ci: feature matrix builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,11 @@ jobs:
         rust:
           - stable
           - beta
+        features:
+          - none
+          - alloc
+          - serde
+          - serde,alloc
     steps:
       - uses: actions/checkout@v6
       - uses: dtolnay/rust-toolchain@master
@@ -88,10 +93,18 @@ jobs:
           toolchain: ${{ matrix.rust }}
       - uses: r7kamura/rust-problem-matchers@v1
       - run: |
-          cargo +${{ matrix.rust }} build \
-            --workspace \
-            --all-features \
-            --release
+          if [ ${{ matrix.features }} == "none" ]; then
+            cargo +${{ matrix.rust }} build \
+              --workspace \
+              --release \
+              --no-default-features
+          else
+            cargo +${{ matrix.rust }} build \
+              --workspace \
+              --release \
+              --no-default-features \
+              --features "${{ matrix.features }}"
+          fi
 
   doc:
     runs-on: ubuntu-latest
