--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,6 +138,9 @@ jobs:
           cargo nextest run \
             --workspace \
             --profile ci
+          cargo test \
+            --workspace \
+            --doc
       - uses: codecov/codecov-action@v5
         with:
           report_type: test_results
