feat: relax msrv

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,7 +44,8 @@
     "ghcr.io/devcontainers/features/git-lfs:1": {},
     "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/devcontainers/features/rust:1": {
-      "profile": "complete"
+      "profile": "complete",
+      "version": "1.88.0"
     }
   },
   "name": "iso10383",
