--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@1.88.0
         with:
           components: rustfmt
       - uses: r7kamura/rust-problem-matchers@v1
@@ -50,6 +50,7 @@ jobs:
           cache-on-failure: "true"
       - uses: EmbarkStudios/cargo-deny-action@v2
         with:
+          rust-version: 1.88.0
           command: check ${{ matrix.check }}
 
   clippy:
@@ -57,7 +58,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - stable
+          - 1.88.0
           - beta
     # Prevent beta warnings from causing CI failure
     continue-on-error: ${{ matrix.rust == 'beta' }}
@@ -79,7 +80,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - stable
+          - 1.88.0
           - beta
         features:
           - none
@@ -111,7 +112,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - stable
+          - 1.88.0
           - beta
     # Prevent beta warnings from causing CI failure
     continue-on-error: ${{ matrix.rust == 'beta' }}
@@ -132,7 +133,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@1.88.0
       - uses: taiki-e/install-action@cargo-nextest
       - run: |
           cargo nextest run \
@@ -151,7 +152,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@1.88.0
         with:
           components: llvm-tools-preview
       - uses: dtolnay/rust-toolchain@nightly
