--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ iso17442-types = { version = "0.3", default-features = false }
 quick-xml = { version = "0.39.0", features = ["serialize"] }
 serde = { version = "1", default-features = false }
 serde_json = "1"
+zerocopy = { version = "0.8.21", default-features = false, features = [
+    "derive",
+] }
 
 [workspace.lints.clippy]
 cargo = "deny"
