ci: use prek builtins, use 1.88.0 for prek tests

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,15 +10,17 @@ exclude: |-
     |^static\/src\/ISO10383_MIC.xml
   )$
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v6.0.0
+  - repo: builtin
     hooks:
+      - id: check-added-large-files
       - id: check-case-conflict
+      - id: check-executables-have-shebangs
+      - id: check-json
       - id: check-merge-conflict
-      - id: check-shebang-scripts-are-executable
-      - id: check-vcs-permalinks
+      - id: check-symlinks
+      - id: check-toml
       - id: check-yaml
-      - id: destroyed-symlinks
+      - id: check-xml
       - id: detect-private-key
       - id: end-of-file-fixer
       - id: fix-byte-order-marker
@@ -46,39 +48,47 @@ repos:
     rev: 0.18.9
     hooks:
       - id: cargo-deny
-  - repo: https://github.com/backplane/pre-commit-rust-hooks
-    rev: v1.2.1
-    hooks:
-      - id: fmt
-        args:
-          - '--all'
-          - '--'
-      - id: clippy
-        args:
-          - '--workspace'
-          - '--all-features'
-          - '--all-targets'
-          - '--fix'
-          - '--allow-dirty'
-          - '--'
-          - '--no-deps'
-      - id: clippy
-        args:
-          - '--workspace'
-          - '--all-features'
-          - '--all-targets'
-          - '--'
-          - '--no-deps'
-      - id: test
-        args:
-          - '--workspace'
-          - '--doc'
   - repo: local
     hooks:
+      - id: cargo-fmt
+        stages: [pre-commit]
+        name: cargo fmt
+        description: unit test for the project
+        entry: bash -c 'cargo +stable fmt --workspace --'
+        language: rust
+        files: \.rs$
+        pass_filenames: true
+      - id: cargo-clippy-fix
+        stages: [pre-commit]
+        name: cargo clippy fix
+        description: clippy fix
+        # yamllint disable-line rule:line-length
+        entry: bash -c 'cargo +stable clippy --workspace --all-features --allow-dirty --fix --no-deps'
+        language: rust
+        files: \.rs$
+        pass_filenames: false
+      - id: cargo-clippy-check
+        stages: [pre-commit]
+        name: cargo clippy check
+        description: cargo clippy check
+        # yamllint disable-line rule:line-length
+        entry: bash -c 'cargo +stable clippy --workspace --all-features --no-deps'
+        language: rust
+        files: \.rs$
+        pass_filenames: false
       - id: cargo-nextest
+        stages: [pre-commit]
         name: cargo nextest
         description: unit test for the project
-        entry: bash -c 'cargo nextest run --workspace --all-features'
+        entry: bash -c 'cargo +1.88.0 nextest run --workspace --all-features'
+        language: rust
+        files: \.rs$
+        pass_filenames: false
+      - id: cargo-doctest
+        stages: [pre-commit]
+        name: cargo doctest
+        description: doctests for the project
+        entry: bash -c 'cargo +1.88.0 test --workspace --all-features --doc'
         language: rust
         files: \.rs$
         pass_filenames: false
