--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,7 +118,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - uses: r7kamura/rust-problem-matchers@v1
       - run: |
-          cargo +${{ matrix.rust }} doc \
+          cargo doc \
             --workspace \
             --release \
             --all-features \
